--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,11 @@ dependencies = [
     "numpy (>=2.3.1,<3.0.0)",
     "scipy (>=1.16.0,<2.0.0)"
 ]
+[tool.poetry.dependencies]
+python = ">=3.12,<4.0"
 
+[tool.poetry.group.dev.dependencies]
+pip-audit = "^2.9.0"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
